tests/e2e/regex_like.error
Error: syntax error in story at line 1, column 10

1|    foo like /r/
               ^

E0041: `/` is not allowed here
